--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
     <!-- 环境变量注入脚本 -->
     <script>
         // 创建全局环境变量对象
-        window.__ENV__ = window.__ENV__ || {};
+        window.__ENV__ = "114514";
         
         // 注入服务器端环境变量 (将由服务器端替换)
         // PASSWORD 变量将在这里被服务器端注入
